# pepper

./: README.md
devel/: .catkin  .rosinstall
devel/include/simple_layers/: SimpleLayerConfigConfig.h
devel/include/social_navigation_layers/: ProxemicLayerConfig.h
devel/lib/pkgconfig/: my_costmap_layer.pc  navigation.pc  python_scripts.pc  range_sensor_layer.pc  right_side_layer.pc  simple_layers.pc  social_navigation_layers.pc  speed_filter_layer.pc  test_layer.pc  test_scripts.pc
devel/lib/python2.7/dist-packages/simple_layers/cfg/: SimpleLayerConfigConfig.py
devel/lib/python2.7/dist-packages/social_navigation_layers/cfg/: ProxemicLayerConfig.py
devel/share/my_costmap_layer/cmake/: my_costmap_layerConfig.cmake
devel/share/navigation/cmake/: navigationConfig.cmake
devel/share/python_scripts/cmake/: python_scriptsConfig.cmake
devel/share/range_sensor_layer/cmake/: range_sensor_layerConfig.cmake
devel/share/right_side_layer/cmake/: right_side_layerConfig.cmake
devel/share/simple_layers/cmake/: simple_layersConfig.cmake
devel/share/simple_layers/docs/: SimpleLayerConfigConfig-usage.dox  SimpleLayerConfigConfig.dox  SimpleLayerConfigConfig.wikidoc
devel/share/social_navigation_layers/cmake/: social_navigation_layersConfig.cmake
devel/share/speed_filter_layer/cmake/: speed_filter_layerConfig.cmake
devel/share/test_layer/cmake/: test_layerConfig.cmake
devel/share/test_scripts/cmake/: test_scriptsConfig.cmake
src/navigation/: CMakeLists.txt
src/navigation/config/: base_local_planner.yaml  costmap_common_params.yaml  costmap_params.yaml  costmap_params_with_speed.yaml  global_costmap.yaml  global_planner.yaml  global_planner_params.yaml  laser_filters.yaml  local_costmap.yaml  local_planner_params.yaml  move_base_global.yaml  move_base_params.yaml  speed_costmap.yaml  twist_mux.yaml  twist_mux_speed.yaml
src/navigation/launch/: amcl.launch  base_move_global.launch  costmap.launch  laser_interpolation_filter.launch  localization.launch  mapping.launch  move_base.launch  navigation_with_speed_map.launch  pepper_bringup.launch  pepper_moveit.launch  pepper_teleoperation.launch  scan_matcher.launch  slow_speed_move_base.launch  speed_move_base.launch
src/navigation/logs/log_monday_14_25/: curent_pose.amcl  followed_goals_log.txt  global_path_log.txt  goal_log.txt  local_path_log.txt
src/navigation/maps/: color_map.pgm  costly_zones.pgm  costly_zones.yaml  newmap.pgm  newmap.yaml  oneobs.pgm  room.pgm  room.yaml  speed_layer.yaml  speed_zones.yaml  twoobs.pgm  twoobs.yaml
src/navigation/maps/old_maps/: color_map.yaml  room.pgm  room_cleaned.pgm  room_cleaned.yaml  speed_layer.pgm  speed_zones.pgm
src/navigation/scripts/: goal_logger.py  initial_pose.py  low_speed_zones_node.py  marker.py  path_logger.py  send_goal.py  speed_limiter.py  stop_in_area_node.py  visualize_speed_map.py
src/navigation/src/: costmap_speed_map.py  get_obsticle_position.py  laser_republisher.py  visulaize_speed_map.py
src/python_scripts/: CMakeLists.txt  package.xml
src/python_scripts/maps/: .yaml  map.pgm  room.yaml
src/python_scripts/scripts/: test_connection.py  test_movment.py
src/right_side_layer/: CMakeLists.txt  package.xml  right_side_layer_plugin.xml
src/right_side_layer/include/right_side_layer/: right_side_layer.h
src/right_side_layer/src/: right_side_layer.cpp
src/simple_layers/: CMakeLists.txt  costmap_plugins.xml
src/simple_layers/include/simple_layers/: simple_layer.h
src/simple_layers/src/: simple_layer.cpp
src/speed_filter_layer/: CMakeLists.txt  speed_plugin.xml
src/speed_filter_layer/include/speed_filter_layer/: speed_filter_layer.h
src/speed_filter_layer/src/: speed_filter_layer.cpp
src/test_layer/: CMakeLists.txt  package.xml  test_layer_plugins.xml
src/test_layer/include/test_layer/: test_layer.h
src/test_layer/src/: test_layer.cpp
src/test_scripts/: cost_map.py  map_space.py  pepper_move.py  pepper_position.py  position.py  rectangle_objects.py  something.py  space.py  test.py  test_mobility.py
src/test_scripts/maps/: first_map.yaml  new.yaml
